--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "framer-motion": "^7.6.4",
     "next": "13.0.0",
     "react": "18.2.0",
